# Scene

./: CMakeLists.txt
res/objects/knife/: Knife.mtl
res/shaders/: lightShader.frag  lightShader.vert  shader.frag  shader.vert
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/Renderer/: Camera.cpp  Camera.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  types.h
